@@ -1342,7 +1342,7 @@ function calc_offset($offsetstring, $width, $height)
 		debug("Numeric Offset found\n");
 		return(array($matches[1],$matches[2]));
 	}
-	elseif(preg_match("/(NE|SE|NW|SW|N|S|E|W|C)(\d\d)?$/i",$offsetstring,$matches))
+	elseif(preg_match("/(NE|SE|NW|SW|N|S|E|W|C)(\d+)?$/i",$offsetstring,$matches))
 	{
 		$multiply = 1;
 		if( isset($matches[2] ) )
